--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,7 @@
       {% endfor %}
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Descarga</a>
+      <a class="sidebar-nav-item" href="https://trello.com/b/xFtd8lo8/goproject">Roadmap</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
     </nav>
   </div>
