--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,8 @@
       {% endfor %}
 
       <a class="sidebar-nav-item" href="https://trello.com/b/xFtd8lo8/goproject">Roadmap</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">Proyecto en GitHub</a>
+      <a class="sidebar-nav-item" href="goproject.meteor.com">GoProject Producción</a>
     </nav>
   </div>
 </div>
