--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
 
       <a class="sidebar-nav-item" href="https://trello.com/b/xFtd8lo8/goproject">Roadmap</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">Proyecto en GitHub</a>
-      <a class="sidebar-nav-item" href="www.goproject.meteor.com">GoProject Producción</a>
+      <a class="sidebar-nav-item" href="http://goproject.meteor.com">GoProject Producción</a>
     </nav>
   </div>
 </div>
